--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  font-family: "Public Sans" !important;
 }
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
