--- a/src/style.css
+++ b/src/style.css
@@ -33,6 +33,7 @@ body {
   min-width: 320px;
   min-height: 100vh;
   background-color: rgba(255, 255, 255, 0.05);
+  position: relative;
 }
 
 h1 {
@@ -67,4 +68,3 @@ button:focus-visible {
   max-width: 1280px;
   padding: 50px;
 }
-
