--- a/src/style.css
+++ b/src/style.css
@@ -32,7 +32,7 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
-  background-color: rgba(255, 255, 255, 0.05);
+  background-color: #090010;
   position: relative;
 }
 
@@ -65,6 +65,4 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
-  padding: 50px;
 }
