--- a/src/style.css
+++ b/src/style.css
@@ -3,13 +3,12 @@
   font-family: "Public Sans" !important;
 }
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: #ffffffde;
   background-color: #090010;
 
   font-synthesis: none;
@@ -62,7 +61,4 @@ button:focus-visible {
 
 .card {
   padding: 2em;
-}
-
-#app {
 }
